<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".presentation.fragment.RestaurantFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/app_name"
                    android:layout_gravity="start"
                    android:textSize="@dimen/t15"
                    android:textStyle="bold"
                    android:padding="@dimen/p15"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical" />

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="@dimen/w25"
                    android:layout_height="@dimen/w52"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_search_24"
                    android:layout_marginEnd="@dimen/p15" />

                <LinearLayout
                    android:id="@+id/search_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/m10"
                    android:paddingRight="@dimen/m10"
                    android:paddingEnd="@dimen/m10"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/m10">

                    <EditText
                        android:id="@+id/search_keyword"
                        android:layout_width="@dimen/m0"
                        android:layout_height="fill_parent"
                        android:inputType="text"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/t14"
                        android:hint="@string/search"
                        android:background="@drawable/input_shape"
                        android:imeOptions="actionSearch"
                        android:layout_weight="8.8"
                        android:autofillHints="" />

                    <ImageView
                        android:id="@+id/search_cancel"
                        android:layout_width="@dimen/m0"
                        android:layout_height="@dimen/w52"
                        android:layout_weight="1.2"
                        android:padding="@dimen/p6"
                        android:contentDescription="@string/cancel"
                        android:src="@drawable/ic_baseline_close_24"
                        android:layout_marginEnd="25dp"/>

                </LinearLayout>


            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="@dimen/p15"
                    android:paddingTop="@dimen/p15"
                    android:paddingRight="@dimen/p15"
                    android:paddingBottom="@dimen/p5"
                    android:text="@string/satisfy_your_snack_attack"
                    android:textColor="#c82b5f"
                    android:textSize="@dimen/t20"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="@dimen/p15"
                    android:paddingRight="@dimen/p15"
                    android:text="@string/every_day_is_a_good_day_for_your_restaurant"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/t11"
                    tools:ignore="SmallSp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restaurants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p5"
                    android:padding="@dimen/p5">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>